--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,13 @@ services:
     restart: always
     ports:
      - "25:25"
+    volumes:
+     - ${PWD}/:/etc/ssl/certs
+     - ${PWD}/exim4.conf.template:/etc/exim4/exim4.conf.template
+     - ${PWD}/passwd:/etc/exim4/passwd
     environment:
+     - KEY_PATH=/etc/ssl/certs/fqdn.key
+     - CERTIFICATE_PATH=/etc/ssl/certs/fqdn.crt
      # # MUST start with : e.g RELAY_NETWORKS=:192.168.0.0/24:10.0.0.0/16
      # # if acting as a relay this or RELAY_DOMAINS must be filled out or incoming mail will be rejected
      # - RELAY_NETWORKS= :192.168.0.0/24
